fix uneven padding

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1123,10 +1123,10 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 .w3-padding-right-small {
   padding-right: 10px;
   padding-top: 5px;
-  padding-bottom: 5px;
 }
 .w3-padding-left-small {
   padding-left: 10px;
+  padding-top: 5px;
 }
 @media (max-width:600px) {
 	.w3-padding-left-small,.w3-padding-right-small {
